<resources>
    <string name="app_name">vote</string>
    <string name="nubtoy">นับถอยหลังวันเลือกตั้ง</string>
    <string name="next">ถัดไป</string>
    <string name="hours">24</string>
    <string name="minutes">60</string>
    <string name="sec">60</string>
    <string name="day">365</string>
    <string name="min">นาที</string>
    <string name="hour">ชั่วโมง</string>
    <string name="seconds">วินาที</string>
    <string name="days">วัน</string>
</resources>